@@ -651,13 +651,13 @@ struct CmdGrammar : public grammar<CmdGrammar>
                >> ")" >> in_data) [&do_print_func_value] 
             | FunctionLhsG [&do_print_info]
             | str_p("datasets") [&do_print_info]
-            | existing_dataset_nr [&do_print_info]
             | str_p("commands") [&do_print_info]
             | str_p("view") [&do_print_info]
             | ds_prefix >> (ch_p('F')|'Z'|"formula") [&do_print_sum_info]
             | (ds_prefix >> str_p("dF") >> '(' 
                >> no_actions_d[DataExpressionG][assign_a(t)] 
                >> ')') [&do_print_sum_derivatives_info]
+            | existing_dataset_nr [&do_print_info]
             | str_p("fit") [&do_print_info] 
             | str_p("set") [&do_print_info] 
             | str_p("errors") [&do_print_info] 
